Spare Parts Code - Final-Upload